--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ output: github_document
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "man/figures/README-",
+  fig.path = "tools/README-",
   out.width = "100%"
 )
 ```
@@ -36,31 +36,41 @@ library(rbin)
 ### Manual Binning
 
 ```{r manual}
-rbin_manual(marketing_bank, y, age, c(29, 31, 34, 36, 39, 42, 46, 51, 56))
+bins <- rbin_manual(marketing_bank, y, age, c(29, 31, 34, 36, 39, 42, 46, 51, 56))
+bins 
+
+# plot
+plot(bins)
 ```
 
 ### Quantile Binning
 
 ```{r quantile}
-rbin_quantiles(marketing_bank, y, age, 10)
+bins <- rbin_quantiles(marketing_bank, y, age, 10)
+bins 
+
+# plot
+plot(bins)
 ```
 
 ### Winsorized Binning
 
 ```{r winsorize}
-rbin_winsorize(marketing_bank, y, age, 10, winsor_rate = 0.05)
+bins <- rbin_winsorize(marketing_bank, y, age, 10, winsor_rate = 0.05)
+bins 
+
+# plot
+plot(bins)
 ```
 
 ### Equal Length Binning
 
 ```{r equal_length}
-rbin_equal_length(marketing_bank, y, age, 10)
-```
+bins <- rbin_equal_length(marketing_bank, y, age, 10)
+bins 
 
-### Equal Frequency Binning
-
-```{r eqal_freq}
-rbin_equal_freq(marketing_bank, y, age, 10)
+# plot
+plot(bins)
 ```
 
 ## Community Guidelines
