change data name to mbank

--- a/README.Rmd
+++ b/README.Rmd
@@ -36,7 +36,7 @@ library(rbin)
 ### Manual Binning
 
 ```{r manual}
-bins <- rbin_manual(marketing_bank, y, age, c(29, 31, 34, 36, 39, 42, 46, 51, 56))
+bins <- rbin_manual(mbank, y, age, c(29, 31, 34, 36, 39, 42, 46, 51, 56))
 bins 
 
 # plot
@@ -46,7 +46,7 @@ plot(bins)
 ### Quantile Binning
 
 ```{r quantile}
-bins <- rbin_quantiles(marketing_bank, y, age, 10)
+bins <- rbin_quantiles(mbank, y, age, 10)
 bins 
 
 # plot
@@ -56,7 +56,7 @@ plot(bins)
 ### Winsorized Binning
 
 ```{r winsorize}
-bins <- rbin_winsorize(marketing_bank, y, age, 10, winsor_rate = 0.05)
+bins <- rbin_winsorize(mbank, y, age, 10, winsor_rate = 0.05)
 bins 
 
 # plot
@@ -66,7 +66,7 @@ plot(bins)
 ### Equal Length Binning
 
 ```{r equal_length}
-bins <- rbin_equal_length(marketing_bank, y, age, 10)
+bins <- rbin_equal_length(mbank, y, age, 10)
 bins 
 
 # plot
