fix code of conduct and add alternate package

--- a/README.Rmd
+++ b/README.Rmd
@@ -103,7 +103,8 @@ plot(bins)
 - [logiBin](https://CRAN.R-project.org/package=logiBin)
 - [woeR](https://CRAN.R-project.org/package=woeR)
 - [woeBinning](https://CRAN.R-project.org/package=woeBinning)
+- [binr](https://CRAN.R-project.org/package=binr)
 
 ## Community Guidelines
 
-Please note that the [34m'rbin'[39m project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By contributing to this project, you agree to abide by its terms.
+Please note that the 'rbin' project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By contributing to this project, you agree to abide by its terms.
