simplify installation instruction

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,9 +21,8 @@ knitr::opts_chunk$set(
 
 ## Installation
 
-rbin is not available on CRAN yet. You can install the development version from [GitHub](https://github.com/) with:
-
-``` r
+```{r cran-installation, eval = FALSE}
+# Install development version from GitHub
 # install.packages("devtools")
 devtools::install_github("rsquaredacademy/rbin")
 ```
