--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/vistributions)](https://cran.r-project.org/package=vistributions) [![cran checks](https://cranchecks.info/badges/summary/rbin)](https://cran.r-project.org/web/checks/check_results_rbin.html)
 [![R build status](https://github.com/rsquaredacademy/rbin/workflows/R-CMD-check/badge.svg)](https://github.com/rsquaredacademy/rbin/actions)
-[![Coverage status](https://codecov.io/gh/rsquaredacademy/rbin/branch/master/graph/badge.svg)](https://codecov.io/github/rsquaredacademy/rbin?branch=master) [![status](https://tinyverse.netlify.com/badge/rbin)](https://CRAN.R-project.org/package=rbin) [![lifecycle](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing) [![](https://cranlogs.r-pkg.org/badges/grand-total/rbin)](https://cran.r-project.org/package=rbin)
+[![Coverage status](https://codecov.io/gh/rsquaredacademy/rbin/branch/master/graph/badge.svg)](https://codecov.io/github/rsquaredacademy/rbin?branch=master) [![status](https://tinyverse.netlify.com/badge/rbin)](https://CRAN.R-project.org/package=rbin) [![Lifecycle: stable](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html) [![](https://cranlogs.r-pkg.org/badges/grand-total/rbin)](https://cran.r-project.org/package=rbin)
 <!-- badges: end -->
 
 ## Installation
@@ -106,7 +106,6 @@ plot(bins)
 
 - [smbinning](https://CRAN.R-project.org/package=smbinning)
 - [logiBin](https://CRAN.R-project.org/package=logiBin)
-- [woeR](https://CRAN.R-project.org/package=woeR)
 - [woeBinning](https://CRAN.R-project.org/package=woeBinning)
 - [binr](https://CRAN.R-project.org/package=binr)
 
